--- a/package.json
+++ b/package.json
@@ -1,30 +1,81 @@
 {
-  "homepage": "https://github.com/Schmavery/facebook-chat-api#readme",
-  "keywords": [
-    "facebook",
-    "chat",
-    "api",
-    "fca"
-  ],
-  "license": "MIT",
-  "main": "index.js",
-  "name": "fca-zaaraowo",
+  "name": "ZaaraOwO",
+  "version": "1.2.5",
+  "description": "My Name's Nguyen Van An And I'm From Vietnam I Was Born And Raised In Ha Noi City",
+  "scripts": {
+    "test": "mocha",
+    "lint": "eslint **.js",
+    "prettier": "prettier utils.js src/* --write"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CHIP2502/fca-zaaraowo.git"
+    "url": "git://github.com/CHIP2502/fca-zaaraowo.git"
   },
-  "scripts": {
-    "lint": "eslint **.js",
-    "prettier": "prettier utils.js src/* --write",
-    "test": "mocha"
-  },
-  "version": "3.9.7",
-  "description": "This repo is a fork from main repo and will usually have new features bundled faster than main repo (and maybe bundle some bugs, too).",
+  "keywords": [
+    "Fca",
+    "zaaraowo",
+    "ZaaraOwO"
+    "fca bot",
+    "fca",
+    "fca-zaaraowo"
+  ],
   "bugs": {
-    "url": "https://github.com/CHIP2502/fca-zaaraowo/issues"
+    "url": "https://github.com/CHIP2502/fca-zaaraowo"
   },
+  "author": "Nguyễn Văn An X ZaaraOwO",
+  "license": "MIT",
+  "dependencies": {
+    "aes-js": "^3.1.2",
+    "axios": "^1.2.1",
+    "bluebird": "^2.11.0",
+    "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^16.0.3",
+    "fs-extra": "^11.1.0",
+    "https-proxy-agent": "^4.0.0",
+    "mqtt": "^4.2.8",
+    "npmlog": "^1.2.0",
+    "request": "^2.53.0",
+    "semver": "",
+    "websocket-stream": "^5.5.0"
+  },
+  "engines": {
+    "node": ">=10.x"
+  },
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "mocha": "^7.0.1",
+    "prettier": "^1.11.1"
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "sourceType": "module"
+    },
+    "rules": {
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "no-unused-vars": [
+        1,
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ]
+    }
+  },
+  "homepage": "https://github.com/CHIP2502/fca-zaaraowo#readme",
+  "main": "index.js",
   "directories": {
+    "lib": "lib",
     "test": "test"
-  },
-  "author": "Nguyen Van An X ZaaraOwO"
+  }
 }
